--- a/client/src/Components/Sub-Components/HomeBody.css
+++ b/client/src/Components/Sub-Components/HomeBody.css
@@ -3,9 +3,10 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     place-items: start;
     padding: 0 40px;
-    gap: 20px;
+    gap: 24px;
     margin-bottom: 20px;
 }
 
