--- a/client/src/Components/Pages/Checkout.css
+++ b/client/src/Components/Pages/Checkout.css
@@ -664,3 +664,225 @@
         bottom: 0;
         z-index: 99;
     }
+
+.checkoutListingContainer {
+    display: none;
+}
+
+@media screen and (max-width: 1100px) {
+    .checkoutContainer {
+        padding: 80px 40px;
+    }
+
+    .checkoutContainerLeft {
+        width: 50%;
+    }
+
+    .checkoutContainerRight {
+        width: 50%;
+    }
+
+    .checkoutContainerRightCard {
+        min-height: 520px;
+        height: 520px;
+        max-width: 350px;
+        padding: 0 24px;
+        padding-bottom: 0px;
+    }
+}
+
+.checkoutHeaderMedia {
+    display: none;
+}
+
+@media screen and (max-width: 850px) {
+    .checkoutContainerRightCard {
+        display: none;
+    }
+
+    .checkoutContainerLeft {
+        width: 100%;
+    }
+
+    .checkoutContainerRight {
+        width: 0%;
+    }
+
+    .checkoutTitleContainer {
+        display: none;
+    }
+
+    .checkoutHeader {
+        display: none;
+    }
+
+    .checkoutHeaderMedia {
+        height: 80px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        position: absolute;
+        top: 0;
+        background-color: white;
+        z-index: 99;
+        padding: 10px 30px;
+        border-bottom: 1px solid rgba(160, 160, 160, 0.4);
+    }
+
+        .checkoutMediaBackIconContainer {
+            min-height: 36px;
+            min-width: 36px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50%;
+            border: 1px solid rgba(160, 160, 160, 0.4);
+            background-color: white;
+        }
+
+        .fa-solid.fa-chevron-left.checkoutMediaBackIcon {
+            margin-top: 1px;
+            font-size: 14px;
+        }
+
+        .checkoutMediaConfirmText {
+            font-size: 16px;
+            font-weight: bold;
+        }
+
+    .checkoutHeaderImageMedia {
+        height: 26px;
+        width: auto;
+        cursor: pointer;
+    }
+
+    .checkoutListingContainer {
+        min-height: 200px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .checkoutListingContainerUpper {
+        height: 80%;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        border-bottom: 1px solid rgba(165, 165, 165, 0.4);
+        margin-top: 20px;
+        padding-bottom: 20px;
+    }
+
+        .checkoutListingContainerUpperLeft {
+            height: 100%;
+            width: auto;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            margin-right: 20px;
+        }
+
+            .checkoutListingContainerUpperLeftImage {
+                height: 90px;
+                min-width: 130px;
+                border-radius: 10px;
+                object-fit: cover;
+                object-position: center;
+            }
+
+        .checkoutListingContainerUpperRight {
+            height: calc(100% - 130px);
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+            .checkoutListingContainerUpperRightText1 {
+                height: 20%;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+                align-items: center;
+                font-size: 12px;
+                color: var(--gray);
+                margin-bottom: 5px;
+            }
+
+                .checkoutListingContainerUpperRightText2 {
+                    height: 60%;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: flex-start;
+                    font-size: 13px;
+                    margin-bottom: 30px;
+                }
+
+                .checkoutListingContainerUpperRightTextContainer {
+                    height: 20%;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                }
+
+                    .fa-solid.fa-star.checkoutListingContainerUpperRightTextContainerIcon {
+                        font-size: 11px;
+                        margin-right: 4px;
+                    }
+
+                    .checkoutListingContainerUpperRightText3 {
+                        font-size: 11px;
+                        font-weight: bold;
+                        margin-right: 4px;
+                    }
+
+                    .checkoutListingContainerUpperRightText4 {
+                        font-size: 11px;
+                        color: var(--gray);
+                    }
+
+    .checkoutListingContainerLower {
+        height: 20%;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 20px 0px;
+    }
+
+        .checkoutListingContainerLowerText {
+            font-size: 14px;
+            margin-right: 4px;
+        }
+
+        .checkoutListingContainerLowerPic {
+            height: 13px;
+            width: auto;
+            margin-bottom: 1px;
+        }
+}
+
+@media screen and (max-width: 450px) {
+    .checkoutContainer {
+        padding: 80px 30px;
+    }
+
+    .checkoutPayInFullText2 {
+        font-size: 14px;
+    }
+}
