--- a/client/src/Components/Pages/Saved.css
+++ b/client/src/Components/Pages/Saved.css
@@ -132,3 +132,40 @@
         left: 50%;
         transform: translate(-50%, -50%)
     }
+
+@media screen and (min-width: 2100px) {
+    .savedBodyContainer {
+        grid-template-columns: repeat(6, 1fr)
+    }
+}
+
+@media screen and (max-width: 2100px) {
+    .savedBodyContainer {
+        grid-template-columns: repeat(5, 1fr)
+    }
+}
+
+@media screen and (max-width: 1450px) {
+    .savedBodyContainer {
+        grid-template-columns: repeat(4, 1fr)
+    }
+}
+
+@media screen and (max-width: 1150px) {
+    .savedBodyContainer {
+        grid-template-columns: repeat(3, 1fr)
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .savedBodyContainer {
+        grid-template-columns: repeat(2, 1fr)
+    }
+}
+
+
+@media screen and (max-width: 600px) {
+    .savedBodyContainer {
+        grid-template-columns: repeat(1, 1fr)
+    }
+}
